--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-loader": "^6.4.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.22.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
