--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
     "react-loadable": "^3.3.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
